2000-06-15  Happy Hippo

	* fvwm/functions.*: Removed undocumented command AddModuleConfig.
	* fvwm/modconf.*: Removed trailing newlines from module config lines.

2000-06-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (WindowShade):
	* fvwm/move_resize.c (Maximize):
	(resize_window):
	don't maximize/shade/resize iconified windows
	(Maximize):
	fixed normal geometry when window was maximized twice

2000-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):
	retry to grab busy cursor only once - rather don't whow a busy cursor
	than hanging fvwm

	* libs/WinMagic.c (GetEqualSizeChildren):
	* libs/Colorset.c (SetWindowBackground):
	* libs/Graphics.c (ParseGradient):
	* fvwm/geometry.c (gravity_constrain_size):
	* fvwm/add_window.c (AddWindow):
	* fvwm/events.c (HandleConfigureRequest):
	* fvwm/style.c (blockand):
	(blockunmask):
	* fvwm/move_resize.c:
	* fvwm/fvwm.c (SetMWM_INFO):
	* fvwm/menus.c (paint_menu):
	-pedantic fixes

	* fvwm/fvwm.h (icon_boxes_struct):
	fix for ANSI C bitfields

	* fvwm/functions.c (execute_complex_function):
	fixed parameter expansion in non-immediate function actions

2000-06-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupTitleBar):
	fixed NoButton bug
	(SetupTitleBar):
	... and removed some unnecessary code again
	(SetupTitleBar):
	and another bug if no buttons were configured

2000-06-12  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm/fvwm.c: fvwm/borders.c:
	* fvwm/module_interface.c: fvwm/move_resize.c:
	* modules/FvwmIconBox/FvwmIconBox.c: modules/FvwmIconMan/FvwmIconMan.c:
	* modules/FvwmWinList/FvwmWinList.c:
	now builds with FVWM_DEBUG_MSGS defined

2000-06-10  olicha  <olivier.chapuis@free.fr>

	* sample/system.fvwm2rc-sample-95:
	Fixed pager swallowing

2000-06-09  Hippo

	* fvwm/move_resize.c: moved EdgeResistance code into doSnapAttraction()

2000-06-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupTitleBar):